Postgres support centric (#378)
* Make postgres-centric

* Ptah Migration step

* Ptah Migration step 2

* Fix and implement

* Fix tests

* Fix tests
