# go/apiserver/apiserver.go
@@ -127,6 +127,7 @@ func APIServer(params Params, restoreWorker RestoreWorkerInterface) http.Handler
 		r.With(defaultAPIMiddlewares...).Route("/settings", Settings(params.RegistrySet.SettingsRegistry))
 		r.With(defaultAPIMiddlewares...).Route("/exports", Exports(params, restoreWorker))
 		r.With(defaultAPIMiddlewares...).Route("/files", Files(params))
+		r.With(defaultAPIMiddlewares...).Route("/search", Search(params.RegistrySet))
 		r.Route("/currencies", Currencies())
 		r.Route("/uploads", Uploads(params))
 		r.Route("/seed", Seed(params.RegistrySet))
